@@ -4,7 +4,7 @@
 # settings
 SETTINGS {
 	# set autoconf compatibility
-	AC_COMPAT = "samples/ac_config.h"
+	AC_COMPAT = "ac_config.h"
 	# set default language
 	LANG = "C"
 	# target files 
